# ChangeLog for media-plugins/mythplugins
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythplugins/ChangeLog,v 1.26 2014/03/23 19:53:48 rich0 Exp $

*mythplugins-0.27_p20140321 (23 Mar 2014)

  23 Mar 2014; Richard Freeman <rich0@gentoo.org>
  +mythplugins-0.27_p20140321.ebuild:
  New patchset.

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org>
  mythplugins-0.26.0_p20130922.ebuild:
  Stable for x86, wrt bug #479622

*mythplugins-0.27_p20131124 (27 Nov 2013)

  27 Nov 2013; Richard Freeman <rich0@gentoo.org>
  +mythplugins-0.27_p20131124.ebuild:
  new patchset

  26 Oct 2013; Richard Freeman <rich0@gentoo.org>
  mythplugins-0.26.0_p20130922.ebuild:
  amd64 stable

*mythplugins-0.27_p20130924 (28 Sep 2013)

  28 Sep 2013; Richard Freeman <rich0@gentoo.org>
  +mythplugins-0.27_p20130924.ebuild:
  Major upstream 0.27 release.

*mythplugins-0.26.0_p20130922 (23 Sep 2013)

  23 Sep 2013; Richard Freeman <rich0@gentoo.org>
  +mythplugins-0.26.0_p20130922.ebuild:
  New patch set.

  03 Aug 2013; Richard Freeman <rich0@gentoo.org>
  -mythplugins-0.26.0_p20130121.ebuild, -mythplugins-0.26.0_p20130207.ebuild:
  Drop old versions.

*mythplugins-0.26.0_p20130729 (03 Aug 2013)

  03 Aug 2013; Richard Freeman <rich0@gentoo.org>
  +mythplugins-0.26.0_p20130729.ebuild:
  New patch set.

  03 Aug 2013; Richard Freeman <rich0@gentoo.org>
  mythplugins-0.26.0_p20130630.ebuild:
  amd64 stable

*mythplugins-0.26.0_p20130630 (03 Jul 2013)

  03 Jul 2013; Richard Freeman <rich0@gentoo.org>
  +mythplugins-0.26.0_p20130630.ebuild:
  Update patchset, EAPI, bug 475368.

*mythplugins-0.26.0_p20130526 (09 Jun 2013)

  09 Jun 2013; Richard Freeman <rich0@gentoo.org>
  +mythplugins-0.26.0_p20130526.ebuild:
  Update patch set.

*mythplugins-0.25.3_p20130422 (05 May 2013)

  05 May 2013; Doug Goldstein <cardoe@gentoo.org>
  +mythplugins-0.25.3_p20130422.ebuild:
  Bump to match MythTV 0.25.3 20130422
