@@ -27,13 +27,13 @@ EBUILD mythplugins-0.26.0_p20130729.ebuild 2952 SHA256 121d1ae5bb0ad816eb8062ab6
 EBUILD mythplugins-0.26.0_p20130922.ebuild 2948 SHA256 c17d559cf6026521b5e41cb0922c537d2f57c550e610dff95dbcbb888d65c6a6 SHA512 bdbd98899e24fb252c9deb3d91d2094d104425d97b3e06347adc0b70743b7d80d66f00b596c967c052fc2dcdb099ef246c77f5691a5b3af2fca5eb7b0ba11bd2 WHIRLPOOL 512a1a627797285a859eebb177abfff3205b97a3096974ed020e6f8d348126d001d4cc1e89cdd73df6a7be89868a53263a71da37ab96baa96f811c1f93380ca0
 EBUILD mythplugins-0.27_p20130924.ebuild 3008 SHA256 29249c9cabdcc9965d440f94ed0172181f91a76ad74c6353e8860c1872b4a572 SHA512 96f3cacb091d19508e7c36d553457486bd395e8fbba23839e8bf51ddca49cff5efb901271bf07b6f57f23b77b911b2168adc12c26abf76643a9314327d99b9d9 WHIRLPOOL 63e8f134ad97e729860f89a5b90de78ab13dd9c6d58f3c048f0f7c0609d31a64b2cef007f2b9588cfb738a12ace58507d6a5d22c3fbf430b37944e1004d99b23
 EBUILD mythplugins-0.27_p20131124.ebuild 3008 SHA256 abd764c437b36b3df965247102d679a52df387031663ca798df0dbeabd1ca05a SHA512 849107a92f78f84bfccb50971074509fddf7f6487c700028cb459b989b34957db73f356fd6b1a32579589a1cd5ac4791e2d1fff537906b6f880ff0ea135b0c2d WHIRLPOOL 7aa3629cc671103441ee056e7c196eb7f2f431fcb9799e4f2a406d36c588e0ab941733e29a9373b2d542f08c65cbe7797259879fad7f4516985f29236c70e153
-EBUILD mythplugins-0.27_p20140321.ebuild 3032 SHA256 823f3d638da623d13229b17014b7e8b541756a36498cac4e82f2453c7c7a3db0 SHA512 cdc22aebaf5f25ea2c3cc30babbc955df115a880035173ab3a9313d89b6cd87fa52325cd334a54222979b7f518a152f7b2a9f44fd2917c7316e593ec14ef571a WHIRLPOOL 0f203f05b0f2e072fd7439f494dcef359620af5d749da93e52274b677be489a3ac00e2119af0302d971d55866783b2872a051027750f0a4b3b0dcebe82ab920d
-MISC ChangeLog 4489 SHA256 c5ffdb0d75fafb87675fb22867fdb57c8abfb409fab46c1dc17fdde1cda05f3f SHA512 88e996c79bac31fac1bf6e4136c356508dced0d80c3714da3e7eb466ce6ff226166a86ab604479f19b17742f0d2a4680e8cdc7b7b3201d5b2baf0bb3bac72400 WHIRLPOOL cbb9718026fce367295d2fc98270999c97028eee655be5133c4100ce71af2a1b9f98aa969065adef535bb961b6ef6982e04c290de83cf1114a880039ac9da588
+EBUILD mythplugins-0.27_p20140321.ebuild 3031 SHA256 3a4539ec999de8f8c4fa5066f351c64435c022e222a005e64bdea6e94d0f74c0 SHA512 77ce9663d9f4ab60bf401c6e25b9e2c878ae9eb23939d89f10ccd70d5881bb3bfd8498a1d6b00445ddfe7d6fc1ca41786f90610374759d8336bd1468ff6a502f WHIRLPOOL 6b52574bf858245b1a362693863445e0f6e72e7aea947a6187486ab12828308f73c4acfcbd62b1d26dd209625d4b56883acc0035e51b4b552acc1969577eb880
+MISC ChangeLog 4601 SHA256 d956d294d8015131dbc90154c427596ebdab0043fbfc5938573420556f620fca SHA512 8be24e92a935ea0fd9f47fcb2fd94fd44da97e8e363bd57dc4ab93516f29fd153a3a4909a2a5e437a5818f908970a54ce9046489a65224b4952009dca3115ba9 WHIRLPOOL a76e3c3ffda2f8684b1f86bf1d57d820f6e15f141b6efa2c58d8b731a085a056f556ec0c132929a7162a3b866b4c13e71e1f3a92719eb1513406fedd93294e6c
 MISC metadata.xml 1253 SHA256 c6f29485e1fb3c2d1f12047e7099c48d1823396ca665c36bd356388ddaa62470 SHA512 a742c07b6d7d2ba5a4fc1e2b528017bf07d2eaee60cc2d4e4dfb9500ca6a3db036241c9018d0d08c50146c75ba61477094f19f5866dec5703c8e28aa7587073b WHIRLPOOL 010679e9baa2ff0c019eb6fd2dccf7e2670fcdf9b2a1f2a4502f7119849c8544eaa13d290acfa645465acc0aa58fe0c915ab6996ee2785f7f49f83b50982052d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlMvO84ACgkQCMFw3lXsEjq8YAD/S1vrITAePDqA3rAepS8sTw17
-Q+kzgDMHB3L+3j8fez0A/0sGDP4ua3sDuzCVgRamQGe+fiO1TsJ/w9lmZBF8E9Kp
-=BrqA
+iF4EAREIAAYFAlNTCxsACgkQCMFw3lXsEjr6VQD+N0g5pDM1F3DSKA0xipO/pEMl
+0Nk3RE8dRhoHregU75gA/0MjIhEA1qRYitAV15CTMoYeFAlxspOyLkOwDEnH/C9M
+=3dw9
 -----END PGP SIGNATURE-----
