@@ -39,13 +39,13 @@ EBUILD mythtv-0.26.0_p20130729.ebuild 9446 SHA256 1f37b5c03a5ff5e11c7314713ac9a1
 EBUILD mythtv-0.26.0_p20130922.ebuild 9442 SHA256 64dc34bf73e2a4b21ecc7dc75bed0ea5d6216000a0175a1810338b44daf1b70a SHA512 b090125e0675f00b8d59dd7d4bf8a17eea47a77b8e351be85ca33eab768c251f8202a1e47ae95ce2a7f23b38113e7463cbdff03acfdc22e1df3852646915a48d WHIRLPOOL 28f5e6aef48a2a80d3323ee0b5e9bdd1f68746a85cb74842060dfb5c6901ff2417f93f5505c6076bc3e45f0f6a309bd7f9b3c4d9c17b29caeaf4b3e8435dfd48
 EBUILD mythtv-0.27_p20130924.ebuild 9613 SHA256 df992a313f12f66cdc0b2ba0b9aa98acbbb9b69e124fe043eefb2e835044584d SHA512 177314ccc30a5b9dd2769ea88bc29f9872cab5fa63e69762218c2d74c8aab706b5c15e80c7de651a6f0487d1ddb1f9693448286f28f47d11a9e40032aea669f6 WHIRLPOOL 3a7bce6e511d8a706a0fa0937b40138f90cd98abac29807e6dd2344e8def8b07b1a9d072066d30c084b26db4269f31d8de87f2f3fc3cbd3b483e04768777066b
 EBUILD mythtv-0.27_p20131124.ebuild 9611 SHA256 a38b9c6f1bf4df991ac284f0a1793f70ebaaef5af0d26b1e774ee248663ddbe6 SHA512 1ed09b766b91c65fee439f8e5ec22c4f3da15d996283408a6a60e2170cab57dea6aed3eaafbc0b613e15165c65d6de5e2874feb02cd32d9ca7032360f2273d94 WHIRLPOOL 55fa244d1b41633a3520c99e977354b706f6a8e5b95db82627d16e64b866de3cf5244d2a32dba8ffd1790a0e1c47a34c964b9d8b3618907d68f62783ef0be504
-EBUILD mythtv-0.27_p20140321.ebuild 9611 SHA256 60f15b1be61fa187c7d6c875ae3c7fb1a42a1b738848d326500013fd0eb903df SHA512 a4d6dbb9a1eeb55f4c489161e22c1a5b9a66a119408120e549e0d090eb97d56e5a80c2aa40f9fb484b8e64e3055663a7f9c3c4edbfbaf6fb9cdb8499b0cbfd52 WHIRLPOOL f843544cd9f3a872988e0a7ecb75f4b9ee025b15d090839948465c66696e1bc708e4f2b758c3688717f1577c70c4449a3626af52986d546289b69cf21ddfa412
-MISC ChangeLog 79775 SHA256 ba02d9f3e0bd8456523bb1baf6f481db030e7db1ff737122e24259bd62c2d197 SHA512 8313be1fab83b51bcf6053bd25152ad34671c202e7ed7d4a9c62edd631f6df94b5ee522fb6da7903628dbb61896d111d4bb986430d7fc8fcf107c5fcf234e78a WHIRLPOOL f262facf01acf029dc63a14151ec9fba9688f224d870c9c3eca79790b435702710ba94c7716a3d2278f970646170f9ad595b243d16f6f7dcee40572126519270
+EBUILD mythtv-0.27_p20140321.ebuild 9610 SHA256 f8b9507333513388eb8c28ea9967107d38bdc013cba68e073daafea2ab7c6f10 SHA512 f308252a5c97abecda58615e04ddfa4a8da9689894e487e654d9e18b62c307cc0377313e7136ed8ad953b45f68823e656330db91438accd7f1d7cfba73fe93c4 WHIRLPOOL 9d4cd98bbb88094f05349bfb7b2589a26c85cd262aeafbad26a61d3d7119a1a409dede2cfad06147d4e49753508f99cbeae183c130d1e092f2a1de50172cdfcb
+MISC ChangeLog 79880 SHA256 943480f0b2b04db56194430c05514d29002415929ec93817b905fde53753a00e SHA512 ea0dbc2fcb5456444b2630f2b8a143d7c255fb46cef3b976708b75e1abafd4695cd97b1cb228149d058d228334d30d6f56b100d8242dc01f109b9359c2678074 WHIRLPOOL 78299241f18f9360d0ea765e046cc42fe66b54ac924584dbd8fbd11399481a40be02751d7b9225f9b31cef7df65f94ef4515e5cbd4942cce2cb96fd74993d412
 MISC metadata.xml 3146 SHA256 497189a8f3879865edf9a272a93180d3132c3ddc5de5c8628e32be70289a7fba SHA512 a0ac5e7d033c8df8b7d49dbfa37f69514451ab2d6276e216eb3bbda0f44602fdea656673cda077f8f06472b11ef2fb9c465d38d6109cb58d3ae1ba78f61d21f1 WHIRLPOOL 0ffe811b665d01aa952580e979c89ce3c65f1b2ecfcc46ec227118d4ecd09efbfc1d85fb8d5296c40dd81473c9abb83a3d0249deddbf05835efc98536bf1790f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlMvO54ACgkQCMFw3lXsEjrSnQEAoOd9fjHra35AluibzJ0Y41tj
-QoAwbAT1eTr2qzEdywkBALOqJt+UGd6hQ3NDn9UHv9ZsXKvEGqN4M5anOXTqrqWv
-=kzHI
+iF4EAREIAAYFAlNTCuoACgkQCMFw3lXsEjrXzgD/fEjt8aKiZmzlFax/0LO76Dfg
+w14JV3S5nuObsXEvyFwA/juJ6emWhqzplkwJAP/aD7rkKCPd2HveXGHkF0MjvKel
+=+5ag
 -----END PGP SIGNATURE-----
