@@ -4,11 +4,11 @@ DESCRIPTION=Official MythTV plugins
 EAPI=5
 HOMEPAGE=http://www.mythtv.org
 IUSE=mytharchive mythbrowser mythgallery mythgame mythmusic mythnetvision mythnews mythweather mythzoneminder cdda cdr exif fftw raw
-KEYWORDS=~amd64 ~x86
+KEYWORDS=amd64 ~x86
 LICENSE=GPL-2
 RDEPEND=!media-plugins/mytharchive !media-plugins/mythbrowser !media-plugins/mythgallery !media-plugins/mythgame !media-plugins/mythmovies !media-plugins/mythmusic !media-plugins/mythnetvision !media-plugins/mythnews !media-plugins/mythweather =media-tv/mythtv-0.27_p20140321*:=[python] mytharchive? ( app-cdr/dvd+rw-tools virtual/python-imaging:= media-video/dvdauthor media-video/mjpegtools[png] media-video/transcode virtual/cdrtools ) mythgallery? ( media-libs/tiff:= virtual/opengl exif? ( >media-libs/libexif-0.6.9:= ) raw? ( media-gfx/dcraw ) ) mythmusic? ( >=media-libs/flac-1.1.2:= >=media-libs/libvorbis-1.0:= >=media-libs/taglib-1.6:= media-sound/lame virtual/opengl cdda? ( dev-libs/libcdio:= cdr? ( virtual/cdrtools ) ) fftw? ( sci-libs/fftw:= ) ) mythnetvision? ( =dev-lang/python-2*:=[xml] dev-python/lxml:= dev-python/mysql-python:= dev-python/oauth:= dev-python/pycurl:= ) mythweather? ( dev-perl/DateManip dev-perl/DateTime-Format-ISO8601 >=dev-perl/DateTime-1 dev-perl/ImageSize dev-perl/JSON dev-perl/SOAP-Lite dev-perl/XML-Simple dev-perl/XML-Parser dev-perl/XML-SAX dev-perl/XML-XPath ) || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
 REQUIRED_USE=cdda? ( mythmusic ) cdr? ( mythmusic cdda ) exif? ( mythgallery ) fftw? ( mythmusic ) mythnews? ( mythbrowser ) raw? ( mythgallery )
 SLOT=0
 SRC_URI=https://github.com/MythTV/mythtv/archive/v0.27.tar.gz -> mythtv-0.27.tar.gz http://dev.gentoo.org/~rich0/distfiles/mythplugins-0.27-583395f5a376637efcd408a102fa64d0f188c12f.tar.xz
 _eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	multilib	fac675dcccf94392371a6abee62d909f	python	be9965681d83c3980660a2660ac95e95	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=b88f35650084ed61450083a8ffcde660
+_md5_=31c127771494a5ccec0cbb10481c5b72
