@@ -4,11 +4,11 @@ DESCRIPTION=Homebrew PVR project
 EAPI=5
 HOMEPAGE=http://www.mythtv.org
 IUSE=alsa altivec libass autostart bluray cec crystalhd debug dvb dvd egl fftw +hls ieee1394 jack lcd lirc perl pulseaudio python raop +theora vaapi vdpau +vorbis +xml xmltv +xvid input_devices_joystick
-KEYWORDS=~amd64 ~x86
+KEYWORDS=amd64 ~x86
 LICENSE=GPL-2
 RDEPEND=>=media-libs/freetype-2.0:= sys-libs/zlib:= x11-libs/libX11:= x11-libs/libXext:= x11-libs/libXinerama:= x11-libs/libXv:= x11-libs/libXrandr:= x11-libs/libXxf86vm:= >=dev-qt/qtcore-4.7.2:4= >=dev-qt/qtdbus-4.7.2:4= >=dev-qt/qtgui-4.7.2:4= >=dev-qt/qtscript-4.7.2:4= >=dev-qt/qtsql-4.7.2:4=[mysql] >=dev-qt/qtopengl-4.7.2:4=[egl?] >=dev-qt/qtwebkit-4.7.2:4= x11-misc/wmctrl:= virtual/mysql:= virtual/opengl:= alsa? ( >=media-libs/alsa-lib-1.0.24:= ) bluray? ( dev-libs/libcdio:= media-libs/libbluray:= ) cec? ( dev-libs/libcec:= ) dvb? ( media-libs/libdvb:= virtual/linuxtv-dvb-headers:= ) dvd? ( dev-libs/libcdio:= ) egl? ( media-libs/mesa:=[egl] ) fftw? ( sci-libs/fftw:3.0= ) hls? ( media-libs/faac:= media-libs/libvpx:= >=media-libs/x264-0.0.20111220:= >=media-sound/lame-3.93.1 ) ieee1394? ( >=sys-libs/libraw1394-1.2.0:= >=sys-libs/libavc1394-0.5.3:= >=media-libs/libiec61883-1.0.0:= ) jack? ( media-sound/jack-audio-connection-kit ) lcd? ( app-misc/lcdproc ) libass? ( >=media-libs/libass-0.9.11:= ) lirc? ( app-misc/lirc ) perl? ( dev-perl/DBD-mysql dev-perl/Net-UPnP dev-perl/LWP-Protocol-https dev-perl/HTTP-Message dev-perl/IO-Socket-INET6 >=dev-perl/libwww-perl-5 ) pulseaudio? ( media-sound/pulseaudio ) python? ( dev-python/mysql-python dev-python/lxml dev-python/urlgrabber ) raop? ( dev-libs/openssl:= net-dns/avahi[mdnsresponder-compat] ) theora? ( media-libs/libtheora:= media-libs/libogg:= ) vaapi? ( x11-libs/libva:= ) vdpau? ( x11-libs/libvdpau:= ) vorbis? ( >=media-libs/libvorbis-1.0:= media-libs/libogg:= ) xml? ( >=dev-libs/libxml2-2.6.0:= ) xvid? ( >=media-libs/xvid-1.1.0:= ) !media-tv/mythtv-bindings !x11-themes/mythtv-themes media-libs/taglib:= dev-libs/glib:= media-fonts/corefonts media-fonts/dejavu media-fonts/liberation-fonts x11-apps/xinit autostart? ( net-dialup/mingetty x11-wm/evilwm x11-apps/xset ) dvd? ( media-libs/libdvdcss:= ) xmltv? ( >=media-tv/xmltv-0.5.43 ) python? ( || ( =dev-lang/python-2.7* =dev-lang/python-2.6* ) )
 REQUIRED_USE=bluray? ( xml ) theora? ( vorbis )
 SLOT=0
 SRC_URI=https://github.com/MythTV/mythtv/archive/v0.27.tar.gz -> mythtv-0.27.tar.gz http://dev.gentoo.org/~rich0/distfiles/mythtv-0.27-583395f5a376637efcd408a102fa64d0f188c12f.tar.xz
 _eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	python	be9965681d83c3980660a2660ac95e95	systemd	9f063b2cc19c5e8030911372aa246c4e	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=b6269e14cf029e35b3686b895736f55b
+_md5_=82aa7f12bbbd8c892a1af5991bc067d8
