@@ -1,6 +1,9 @@
 # ChangeLog for media-tv/mythtv
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/mythtv/ChangeLog,v 1.412 2014/03/23 19:52:56 rich0 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/mythtv/ChangeLog,v 1.413 2014/04/19 23:46:44 rich0 Exp $
+
+  19 Apr 2014; Richard Freeman <rich0@gentoo.org> mythtv-0.27_p20140321.ebuild:
+  amd64 stable - 471536
 
 *mythtv-0.27_p20140321 (23 Mar 2014)
 
