@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/mythplugins
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythplugins/ChangeLog,v 1.26 2014/03/23 19:53:48 rich0 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/mythplugins/ChangeLog,v 1.27 2014/04/19 23:47:38 rich0 Exp $
+
+  19 Apr 2014; Richard Freeman <rich0@gentoo.org>
+  mythplugins-0.27_p20140321.ebuild:
+  amd64 stable - 471536
 
 *mythplugins-0.27_p20140321 (23 Mar 2014)
 
